speech-tools (1:2.1~release-5) UNRELEASED; urgency=low

  [ Peter Drysdale ]
  * Add patch to enable compiling of with clang 3.0.
  * Remove support for EsounD which has been deprecated by Gnome
  * Fix Lintian flagged spelling error.
  * Add missing dependency on libaudiofile-dev. Thanks
    to Alessio Treglia.  (Closes: #657603)

 -- Peter Drysdale <drysdalepete@gmail.com>  Mon, 03 Sep 2012 08:53:41 +1000

speech-tools (1:2.1~release-4) unstable; urgency=low

  [ Samuel Thibault ]
  * control:
    - Bump Standards-Version to 3.9.3 (no changes).
    - Set libestools2.1 multi-arch: same.
  * rules: Install libraries to multi-arch path.

  [ Peter Drysdale ]
  * Add Pre-Depend on multiarch-support as flagged by lintian
  * Add qualification to unqualified method calls in templates
    allowing compiling with gcc>=4.7.
  * Remove old compiler switch fno-shared-data which is not present
    after gcc>=4.0.

 -- Samuel Thibault <sthibault@debian.org>  Mon, 26 Mar 2012 00:05:28 +0200

speech-tools (1:2.1~release-3) unstable; urgency=low

  [ Samuel Thibault ]
  * control: Depend on hardening-check.
  * rules: Set DEB_BUILD_HARDENING=1 to enable hardening.
  * patches/fmt.diff: Fix format security issue.

  [ Peter Drysdale ]
  * compat: bump to debhelper 8
  * Move to dh style minimum format for rules.
  * Move to source format 3.0 quilt.
  * Refresh contexts, clean up some patches, and del. obs. uncompiled patches
  * Provide individual patch headers and remove misleading
    uniform headers about patching for GCC (Closes: #616341)
  * Clean build system and drop obsolete compiler patches.

 -- Peter Drysdale <drysdalepete@gmail.com>  Tue, 13 Dec 2011 17:22:52 +1000

speech-tools (1:2.1~release-2.1) unstable; urgency=low

  * New maintainer (closes: #637820)

 -- Jean-Philippe MENGUAL <texou@accelibreinfo.eu>  Tue, 16 Aug 2011 02:19:25 +0200

speech-tools (1:2.1~release-2) unstable; urgency=low

  * Make libestools2.1-dev provide libestools2.0-dev, so that binNMUs can