@@ -1,9 +1,5 @@
-Debian specific build system options
-This patch refreshes build system options in one place.
-Formerly these were split amongst config_compilers_gcc295.mak.diff
-and config_compilers_gcc_defaults.mak.diff. Since gcc 2.95 is long
-obsolete we do this in one place now.
-Author: Peter Drysdale <drysdalepete@gmail.com>
+This a a Debian specific patch for Festival speech synthesis
+build system.
 
 --- speech-tools-2.1~release.orig/config/compilers/gcc_defaults.mak
 +++ speech-tools-2.1~release/config/compilers/gcc_defaults.mak
@@ -16,24 +12,19 @@ Author: Peter Drysdale <drysdalepete@gmail.com>
  ifeq ($(OSTYPE),Darwin)
  CXX=g++
  endif
-@@ -48,14 +48,14 @@ COMPILER_DESC=FSF gcc
+@@ -47,8 +47,9 @@ endif
+ COMPILER_DESC=FSF gcc
  COMPILER_VERSION_COMMAND=$(CXX) -v 2>&1 | tail -1 | sed -e 's/^....//'
  
- CFLAGS  = $(GCC_SYSTEM_OPTIONS) $(CC_OTHER_FLAGS)
+-CFLAGS  = $(GCC_SYSTEM_OPTIONS) $(CC_OTHER_FLAGS)
 -CXXFLAGS  =  $(GCC_SYSTEM_OPTIONS) -fno-implicit-templates $(CC_OTHER_FLAGS)
-+CXXFLAGS  =  $(GCC_SYSTEM_OPTIONS) $(CC_OTHER_FLAGS)
++CFLAGS    += $(GCC_SYSTEM_OPTIONS) $(CC_OTHER_FLAGS)
++CXXFLAGS  +=  $(GCC_SYSTEM_OPTIONS) $(CC_OTHER_FLAGS)
++LINKFLAGS +=  $(LDFLAGS)
  
  DEBUG_CCFLAGS   = -g
  DEBUG_CXXFLAGS  = -g
- DEBUG_LINKFLAGS = -g
- 
- WARN_CCFLAGS   = -Wall
--WARN_CXXFLAGS  = -Wall
-+WARN_CXXFLAGS  = -Wall -Wno-non-template-friend
- WARN_LINKFLAGS = -Wall
- 
- VERBOSE_CCFLAGS   =
-@@ -81,7 +81,7 @@ SHARED_CXXFLAGS  = -fPIC
+@@ -81,7 +82,7 @@ SHARED_CXXFLAGS  = -fPIC
  SHARED_LINKFLAGS = 
  
  ifndef GCC_MAKE_SHARED_LIB
@@ -42,7 +33,7 @@ Author: Peter Drysdale <drysdalepete@gmail.com>
  else
      MAKE_SHARED_LIB = $(GCC_MAKE_SHARED_LIB)
  endif
-@@ -98,9 +98,10 @@ TEMPLATE_ARGS =
+@@ -98,9 +99,10 @@ TEMPLATE_ARGS =
  ## The -lgcc here is redundant - gcc does this anyway - but it
  ## helps java know what needs to be loaded.
  
